@@ -1,6 +1,6 @@
 Package: effects
 Version: 3.0-2
-Date: 2014/09/20
+Date: 2014/09/25
 Title: Effect Displays for Linear, Generalized Linear, Multinomial-Logit, Proportional-Odds Logit Models and Mixed-Effects Models
 Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaster.ca"),
 	person("Sanford", "Weisberg", role = "aut", email = "sandy@umn.edu"),
@@ -11,6 +11,7 @@ Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaste
     person("Steve", "Taylor", role = "ctb"))
 Depends: lattice, grid, colorspace
 Suggests: nlme, lme4, MASS, nnet, poLCA, heplots
+Imports: pbkrtest
 LazyLoad: yes
 LazyData: yes
 Description: 
