@@ -2,6 +2,8 @@ Version 3.0-2
 
  o plot.eff() honors rescale.axis=FALSE when plotting partial residuals (bug reported by Alexander Wietzke).
 
+ o Effect.mer() can use KR coefficient covariances to construct CIs for effects in LMMs.
+
 Version 3.0-1
 
  o Added an argument vcov. to Effect and effect (and allEffects) to select a function for computing the variance covariance matrix of the coefficient estimates.  The default is the usual `vcov` fucntion.
